src/style.css
:root {
  --main-font: "Playfair Display", serif;
  --fun-font: "Rubik Pixels", cursive;
  --blue-sky: rgb(147, 252, 252);
}
body {
  background: rgb(18, 18, 86);
}
header {
  text-align: center;
  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
    url(/images/pexels-nadiia-9244851.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  padding: 60px;
  border-radius: 5px;
  max-width: 1200px;
  margin: 0 auto;
}
h1 {
  color: var(--blue-sky);
  font-family: var(--main-font);
  font-size: 75px;
}
h2 {
  color: var(--blue-sky);
  font-family: var(--main-font);
  font-size: 45px;
}
header h3 {
  color: rgb(0, 161, 30);
  font-family: var(--fun-font);
  font-size: 40px;
}
button {
  color: rgb(0, 0, 0);
  background-color: var(--blue-sky);
  font-size: 20px;
  font-family: var(--fun-font);
  padding: 10px 15px;
  border-radius: 20px;
}
p {
  font-family: var(--main-font);
  font-size: 16px;
  line-height: 1.5;
}
section {
  background: rgb(255, 255, 255);
  display: grid;
  grid-template-columns: 1fr 1fr;
  padding: 100px 60px;
  grid-gap: 20px;
  max-width: 1200px;
  margin: 0 auto;
}
section h3 {
  opacity: 0.7;
  font-size: 28px;
  font-family: var(--main-font);
}

img {
  width: 100%;
  border-radius: 15px;
}
a {
  font-family: var(--main-font);
  text-decoration: none;
  color: var(--blue-sky);
  transition: all 150ms ease-in-out;
}
a:hover {
  color: rgb(0, 161, 30);
}
footer {
  font-family: var(--main-font);
  color: var(--blue-sky);
  background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
    url(/images/pexels-milada-vigerova-5984695.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  display: grid;
  grid-template-columns: 1fr 2fr 2fr;
  grid-gap: 20px;
  padding: 20px 60px;
  max-width: 1200px;
  margin: 0 auto;
  line-height: 1.3;
}
footer h4 {
  font-family: var(--fun-font);
  font-size: 23px;
}
footer ul {
  padding: 0;
}
footer li {
  list-style: none;
  line-height: 1.5;
}
@media (max-width: 900px) {
  footer,
  section {
    grid-template-columns: 1fr;
    grid-gap: 5px;
    padding: 50px 30px;
  }
  header {
    padding: 30px;
  }
  h1 {
    font-size: 35px;
  }
  h2 {
    font-size: 22px;
  }
  h3 {
    font-size: 20px;
  }
  h4 {
    margin-bottom: 0px;
    font-size: 16px;
  }
  button {
    font-size: 10px;
  }
  p,
  li {
    font-size: 12px;
  }
}

